k8s/spring/spring-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: spring
  ports:
    - port: 8005
      targetPort: 8005
